The LayoutView does not need position update, mark it as such.

Bug: 770324
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ib33f369309e59128a134e8f4120e46f647373d16
Reviewed-on: https://chromium-review.googlesource.com/869136
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532159}
Former-commit-id: 82f67f9fb5a22f82bd51b9e46b9aa5540824c38c